--- a/counsellingApp/templates/app/notification.html
+++ b/counsellingApp/templates/app/notification.html
@@ -3,12 +3,12 @@
 <section id="section4">
   <div id="section4container">
     <div>
-      <p style="width: 95%; float: left; font-weight: bold">Notifications</p>
+      <p style="width: 95%; float: left; font-weight: bold">Notifications <i class="fas fa-bell" style="color:gold;"></i></p>
       <p id="see">See All</p>
     </div>
     <center><hr id="hrsect4" /></center>
 
-    <div style="overflow-y: scroll; height: 100%" class="bg-white">
+    <div style="overflow-y: scroll; height: 100%;" class="bg-white">
       <div id="mybox4">
         <img id="imgnotification" src="{% static "media/University.png"%}"
         alt="profile image"/>
