--- a/counsellingApp/templates/app/assets/main.css
+++ b/counsellingApp/templates/app/assets/main.css
@@ -1295,7 +1295,11 @@ margin-bottom:2%;
 }
 
 #mybox4:hover {
+    background:white;
     box-shadow: 0px 0px 16px 0px rgba(0, 0, 0, 0.2);
+   position: fixed;
+     z-index: 2;
+     width: 75%;
 }
 
 #imgnotification {
