--- a/counsellingApp/templates/app/home.html
+++ b/counsellingApp/templates/app/home.html
@@ -30,7 +30,7 @@ include 'app/notification.html' %} {% include 'app/admin.html' %} {% include
     <div class="navigation">
       {% for object in objects %} {% if object.user_id == pk|add:0 %}
       <!---->
-      {% if object.status == 'student'%}
+      {% if object.status == 'STUDENT'%}
 
       <ul>
         <li>
@@ -67,7 +67,7 @@ include 'app/notification.html' %} {% include 'app/admin.html' %} {% include
           </a>
         </li>
       </ul>
-      {% elif object.status == 'counsellor'%}
+      {% elif object.status == 'COUNSELLOR'%}
       <ul>
         <li>
           <a href="{% url 'counsellingUrls:adminPage' pk %}">
@@ -112,7 +112,7 @@ include 'app/notification.html' %} {% include 'app/admin.html' %} {% include
           </a>
         </li>
       </ul>
-      {% else %}
+      {% elif object.status == 'ADMIN' %}
       <ul>
         <li>
           <a href="{% url 'counsellingUrls:superadminPage' pk %}">
@@ -166,207 +166,59 @@ include 'app/notification.html' %} {% include 'app/admin.html' %} {% include
           </a>
         </li>
       </ul>
-      {% endif %} {% else %}{% endif %}{% endfor %}
-    </div>
-
-    <div class="col-sm-4" style="padding-top: 400px; padding-left: 40px">
-      <a href="{% url 'counsellingUrls:loginPage' %}">
-        <button class="btn btn-primary">LOGOUT</button></a
-      >
-    </div>
-
-    {% comment %}
-    <div id="tabIcons">
-      {% for object in objects %} {% if object.user_id == pk|add:0 %}
+      {% else %} {% endif %}
       <!---->
-      {% if object.status == 'student'%}
-      <a href="{% url 'counsellingUrls:indexPage' pk %}" id="indexPage"
-        ><i
-          class="fa fa-home"
-          aria-hidden="true"
-          id="elementID"
-          type="submit"
-          method="GET"
-        >
-          Home</i
-        ></a
-      >
-      <a
-        href="{% url 'counsellingUrls:notificationPage' pk %}"
-        id="notificationPage"
-        ><i
-          class="fa fa-bell"
-          aria-hidden="true"
-          id="elementID"
-          type="submit"
-          method="GET"
-        >
-          Notifications</i
-        ></a
-      >
-      <a href="{% url 'counsellingUrls:profilePage' pk %}" id="profilePage"
-        ><i
-          class="fa fa-user"
-          aria-hidden="true"
-          id="elementID"
-          type="submit"
-          method="GET"
-        >
-          Profile</i
-        ></a
-      >
-      <a
-        href="https://maps.google.com/maps/ms?ie=UTF8&hl=en&msa=0&ll=5.651967,-0.188441&spn=0.005466,0.010042&t=h&z=17&om=1&msid=114140572394999445956.000441bd2615d34504d68&mid=1333430664&showlabs=1"
-        ><i
-          class="fas fa-map-marker-alt"
-          aria-hidden="true"
-          id="elementID"
-          type="submit"
-          method="GET"
-        >
-          UG MAP</i
-        ></a
-      >
-      {% elif object.status == 'counsellor'%}
+      {% else %}{% endif %}{% endfor %}
+      <!---->
 
-      <a href="{% url 'counsellingUrls:adminPage' pk %}" id="admin">
-        <i
-          class="fas fa-user-shield"
-          aria-hidden="true"
-          id="elementID"
-          type="submit"
-          method="GET"
-        >
-          Dashboard</i
-        >
-      </a>
+      {% for student in students %}
+      <!---->
+      {% if student.student_id == pk|add:0 %}<!---->
+      {% if student.status == 'STUDENT'%}
 
-      <a href="{% url 'counsellingUrls:indexPage' pk %}" id="indexPage"
-        ><i
-          class="fa fa-home"
-          aria-hidden="true"
-          id="elementID"
-          type="submit"
-          method="GET"
-        >
-          Home</i
-        ></a
-      >
-      <a
-        href="{% url 'counsellingUrls:notificationPage' pk %}"
-        id="notificationPage"
-        ><i
-          class="fa fa-bell"
-          aria-hidden="true"
-          id="elementID"
-          type="submit"
-          method="GET"
-        >
-          Notifications</i
-        ></a
-      >
-      <a href="{% url 'counsellingUrls:profilePage' pk %}" id="profilePage"
-        ><i
-          class="fa fa-user"
-          aria-hidden="true"
-          id="elementID"
-          type="submit"
-          method="GET"
-        >
-          Profile</i
-        ></a
-      >
-      <a
-        href="https://maps.google.com/maps/ms?ie=UTF8&hl=en&msa=0&ll=5.651967,-0.188441&spn=0.005466,0.010042&t=h&z=17&om=1&msid=114140572394999445956.000441bd2615d34504d68&mid=1333430664&showlabs=1"
-        ><i
-          class="fas fa-map-marker-alt"
-          aria-hidden="true"
-          id="elementID"
-          type="submit"
-          method="GET"
-        >
-          UG MAP</i
-        ></a
-      >
+      <ul>
+        <li>
+          <a href="{% url 'counsellingUrls:indexPage' pk %}">
+            <span class="icon"><ion-icon name="home-outline"></ion-icon></span>
+            <span class="title">Home</span>
+          </a>
+        </li>
 
-      {% else %}
-      <a href="{% url 'counsellingUrls:superadminPage' pk %}" id="super_admin"
-        ><i
-          class="fas fa-user-shield"
-          aria-hidden="true"
-          id="elementID"
-          type="submit"
-          method="GET"
-        >
-          Admin Dashboard</i
-        ></a
-      >
-      <a href="{% url 'counsellingUrls:adminPage' pk %}" id="admin"
-        ><i
-          class="fas fa-user-shield"
-          aria-hidden="true"
-          id="elementID"
-          type="submit"
-          method="GET"
-        >
-          Dashboard</i
-        ></a
-      >
-      <a href="{% url 'counsellingUrls:indexPage' pk %}" id="indexPage"
-        ><i
-          class="fa fa-home"
-          aria-hidden="true"
-          id="elementID"
-          type="submit"
-          method="GET"
-        >
-          Home</i
-        ></a
-      >
-      <a
-        href="{% url 'counsellingUrls:notificationPage' pk %}"
-        id="notificationPage"
-        ><i
-          class="fa fa-bell"
-          aria-hidden="true"
-          id="elementID"
-          type="submit"
-          method="GET"
-        >
-          Notifications</i
-        ></a
-      >
-      <a href="{% url 'counsellingUrls:profilePage' pk %}" id="profilePage"
-        ><i
-          class="fa fa-user"
-          aria-hidden="true"
-          id="elementID"
-          type="submit"
-          method="GET"
-        >
-          Profile</i
-        ></a
-      >
-      <a
-        href="https://maps.google.com/maps/ms?ie=UTF8&hl=en&msa=0&ll=5.651967,-0.188441&spn=0.005466,0.010042&t=h&z=17&om=1&msid=114140572394999445956.000441bd2615d34504d68&mid=1333430664&showlabs=1"
-        ><i
-          class="fas fa-map-marker-alt"
-          aria-hidden="true"
-          id="elementID"
-          type="submit"
-          method="GET"
-        >
-          UG MAP</i
-        ></a
-      >
+        <li>
+          <a href="{% url 'counsellingUrls:notificationPage' pk %}">
+            <span class="icon"
+              ><ion-icon name="chatbubble-ellipses-outline"></ion-icon>
+            </span>
+            <span class="title">Notifications</span>
+          </a>
+        </li>
 
-      {% endif %} {% else %}{% endif %}{% endfor %}
+        <li>
+          <a href="{% url 'counsellingUrls:profilePage' pk %}">
+            <span class="icon"><ion-icon name="cloud-outline"></ion-icon></span>
+            <span class="title">Profile</span>
+          </a>
+        </li>
 
-      <p class="openbtn" onclick="openNav()">
-        <i class="fas fa-bars" id="collapse"></i>
-      </p>
+        <li>
+          <a
+            href="https://maps.google.com/maps/ms?ie=UTF8&hl=en&msa=0&ll=5.651967,-0.188441&spn=0.005466,0.010042&t=h&z=17&om=1&msid=114140572394999445956.000441bd2615d34504d68&mid=1333430664&showlabs=1"
+          >
+            <span class="icon"
+              ><ion-icon name="navigate-outline"></ion-icon
+            ></span>
+            <span class="title">UG MAP</span>
+          </a>
+        </li>
+      </ul>
+
+      {% else %} {% endif %} {% else %} {% endif %} {% endfor %}
     </div>
-    {% endcomment %}
+
+    {% comment %} <br />
+    <br />
+    <br />
+    {% endcomment %}<!---->
 
     <script
       type="module"
@@ -376,6 +228,11 @@ include 'app/notification.html' %} {% include 'app/admin.html' %} {% include
       nomodule
       src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"
     ></script>
+    <div class="col-sm-4" style="padding-top: 400px; padding-left: 40px">
+      <a href="{% url 'counsellingUrls:loginPage' %}">
+        <button class="btn btn-primary">LOGOUT</button></a
+      >
+    </div>
   </section>
 
   <!--section 3-->
