--- a/counsellingApp/templates/app/home.html
+++ b/counsellingApp/templates/app/home.html
@@ -25,7 +25,7 @@ include 'app/notification.html' %} {% include 'app/admin.html' %} {% include
           <center><p style="margin: 0">COUNSELLING</p></center>
           {% for st in students %}
           <p>{{ st.lastName }}</p>
-          {% endfor %}
+          {% endfor %} {{ students }}
         </div>
       </center>
     </div>
