--- a/counsellingApp/templates/app/index.html
+++ b/counsellingApp/templates/app/index.html
@@ -56,7 +56,7 @@
         
         </div>
   <div class="panel-footer" style="background-color:white;height: 20%;overflow-y:scroll"> {{object.occupation}}</div>
-     <center><a href="{% url 'counsellingUrls:popupPage' object.user_id %}"     
+     <center><a href="{% url 'counsellingUrls:popupPage' object.id %}"     
       id = "home_img"
        type="button" class="btn btn-warning" 
       >View More</a>
