--- a/counsellingApp/templates/app/settings.html
+++ b/counsellingApp/templates/app/settings.html
@@ -57,7 +57,7 @@
                 {% endif %}
                 <td>
                   <center>
-                    <a href = {% url 'counsellingUrls:student_details' studentbook.id%}>
+                    <a href = {% url 'counsellingUrls:student_details' studentbook.student_id %}>
                     <button
                       class="btn btn-sm btn-outline-warning remove_log"
                       type="button"
