--- a/counsellingApp/templates/app/popup.html
+++ b/counsellingApp/templates/app/popup.html
@@ -77,7 +77,7 @@
             <div class="col-sm-10">
               <div class="row">
                 <i
-                  class="fa-solid fa-phone"
+                  class="fa fa-phone"
                   id="awe"
                   style="
                     color: white;
@@ -87,7 +87,7 @@
                   "
                 ></i>
                 <i
-                  class="fa-solid fa-message"
+                  class="fa fa-envelope"
                   id="awe"
                   style="
                     color: white;
@@ -97,7 +97,7 @@
                   "
                 ></i>
                 <i
-                  class="fa-solid fa-users"
+                  class="fa fa-users"
                   id="awe"
                   style="
                     color: white;
@@ -106,6 +106,27 @@
                     padding: 2%;
                   "
                 ></i>
+              </div>
+              <div class="col-sm-2">
+                <a href="{% url 'counsellingUrls:indexPage' pk %}">
+                  <i
+                    class="fa fa-angle-left"
+                    style="
+                      position: relative;
+                      font-size: 30px;
+                      margin-top: 50px;
+                      display: flex;
+                      justify-content: center;
+                      align-items: center;
+                      height: 50px;
+                      color: white;
+                      opacity: 0.5;
+                      width: 50px;
+                      border-radius: 50px;
+                      border: 1px solid white;
+                    "
+                  ></i>
+                </a>
               </div>
             </div>
           </div>
