--- a/counsellingApp/templates/app/result.html
+++ b/counsellingApp/templates/app/result.html
@@ -80,7 +80,7 @@
                 <div class="col-sm-10">
                   <div class="row">
                     <i
-                      class="fa-solid fa-phone"
+                      class="fa fa-phone"
                       id="awe"
                       style="
                         color: white;
@@ -90,7 +90,7 @@
                       "
                     ></i>
                     <i
-                      class="fa-solid fa-message"
+                      class="fa fa-envelope"
                       id="awe"
                       style="
                         color: white;
@@ -100,7 +100,7 @@
                       "
                     ></i>
                     <i
-                      class="fa-solid fa-users"
+                      class="fa fa-users"
                       id="awe"
                       style="
                         color: white;
