--- a/counsellingApp/templates/app/student.html
+++ b/counsellingApp/templates/app/student.html
@@ -1,5 +1,9 @@
 {% include 'app/header.html' %}{% include 'app/home.html'%} {% load static%}
   <body>
-      
+      <section id = "10">
+          <div class = "col-sm-12">
+
+          </div>
+      </section>
     </body>
 </html>
