--- a/counsellingApp/templates/app/assets/main.css
+++ b/counsellingApp/templates/app/assets/main.css
@@ -152,6 +152,21 @@
 
 }
 
+
+#section10{
+ display: block;
+    width: 100%; 
+    height: 100%;
+    overflow:hidden;
+    animation-name: example;
+    animation-duration: 1s;
+    background-color: white;
+}
+
+
+
+
+
 @keyframes example {
     0% {
         opacity: 0;
@@ -1055,7 +1070,14 @@ border-left: 3px solid cyan;
 
 @keyframes stretch{
     0%{
-       width:50px; 
+       width:0px; 
+       padding:0px;
+       display:flex;
+       
+    }
+      50%{
+       width:0px; 
+       padding:0px;
        display:flex;
        
     }
@@ -1515,17 +1537,20 @@ margin-bottom:2%;
 
 .card-box:hover {
     text-decoration: none;
+    overflow:hidden;
     color: #f1f1f1;
 }
 
 .card-box:hover .icon i {
     font-size: 100px;
     transition: 1s;
-    -webkit-transition: 1s;
+    padding:0px;
+    -webkit-transition: 1s ;
 }
 
 .card-box .inner {
-    padding: 5px 10px 0 10px;
+margin:0px;
+padding:0px;    
 }
 
 .card-box h3 {
