--- a/counsellingApp/templates/app/student.html
+++ b/counsellingApp/templates/app/student.html
@@ -13,12 +13,12 @@
                     {% endif %}
                     <div>
                 
-            <p>NAME: {{ student.firstName}} {{ student.lastName}}</p>
-            <p>COURSE: {{ student.course}}</p>
-            <p>LEVEL: {{ student.level}}</p>
-            <p>AGE: {{ student.age}}</p>
-             <p>CONTACT: 0{{ student.contact}}</p>
-            <p>EMAIL: {{ student.email}}</p>
+            <p id = "mystudent">NAME: {{ student.firstName}} {{ student.lastName}}</p>
+            <p id = "mystudent">COURSE: {{ student.course}}</p>
+            <p id = "mystudent">LEVEL: {{ student.level}}</p>
+            <p id = "mystudent">AGE: {{ student.age}}</p>
+             <p id = "mystudent">CONTACT: 0{{ student.contact}}</p>
+            <p id = "mystudent">EMAIL: {{ student.email}}</p>
 
 
                
