--- a/counsellingApp/templates/app/popup.html
+++ b/counsellingApp/templates/app/popup.html
@@ -108,7 +108,10 @@
                 ></i>
               </div>
               <div class="col-sm-2">
-                <a href="{% url 'counsellingUrls:indexPage' pk %}">
+                <a
+                  href="{% url 'counsellingUrls:indexPage' pk %}"
+                  id="minelinks"
+                >
                   <i
                     class="fa fa-angle-left"
                     style="
