--- a/counsellingApp/templates/app/notification.html
+++ b/counsellingApp/templates/app/notification.html
@@ -3,21 +3,30 @@
 <section id="section4">
   <div id="section4container">
     <div>
-      <p style="width: 95%; float: left; font-weight: bold">Notifications <i class="fas fa-bell" style="color:gold;"></i></p>
+      <p style="width: 95%; float: left; font-weight: bold">
+        Notifications <i class="fas fa-bell" style="color: gold"></i>
+      </p>
       <p id="see">See All</p>
     </div>
     <center><hr id="hrsect4" /></center>
 
-    <div style="overflow-y: scroll; height: 100%;" class="bg-white">
+    <div style="overflow-y: scroll; height: 100%" class="bg-white">
+      {% for notificate in notification %}<!---->
+      {% if notificate.student_id == pk%}
       <div id="mybox4">
         <img id="imgnotification" src="{% static "media/University.png"%}"
         alt="profile image"/>
-
         <div id="unique">
-          <p id="notname">UNIVERSITY OF GHANA</p>
-          <p id="notnamesub">Message...</p>
+          <p id="notname">{{ notificate.counsellor_firstName}}</p>
+          <p id="notnamesub">{{ notificate.subject}}.</p>
         </div>
-       
+        <div id="uni">
+          <p style="opacity: 0.4">{{ notificate.date}}</p>
+
+          <p style="opacity: 0.4">{{ notificate.time}}</p>
+        </div>
+      </div>
+      {% else %} {% endif %} {% endfor %}
     </div>
   </div>
   <!--mybox4container-->
