--- a/counsellingApp/templates/app/dashboard.html
+++ b/counsellingApp/templates/app/dashboard.html
@@ -549,6 +549,7 @@
       </form>
     </div>
     </div>
+  </diV>
     <div id="footer6">
     <a href="{% url 'counsellingUrls:adminPage' pk %}" id="adminPage">
       <i
