--- a/counsellingApp/templates/app/notification.html
+++ b/counsellingApp/templates/app/notification.html
@@ -21,9 +21,11 @@
           <p id="notnamesub">{{ notificate.subject}}.</p>
         </div>
         <div id="uni">
-          <p style="opacity: 0.4">{{ notificate.date}}</p>
+          <center>
+            <p style="opacity: 0.4">{{ notificate.date}}</p>
 
-          <p style="opacity: 0.4">{{ notificate.time}}</p>
+            <p style="opacity: 0.4">{{ notificate.time}}</p>
+          </center>
         </div>
       </div>
       {% else %} {% endif %} {% endfor %}
