--- a/counsellingApp/templates/app/assets/main.css
+++ b/counsellingApp/templates/app/assets/main.css
@@ -1337,7 +1337,8 @@ margin-bottom:2%;
     box-shadow: 0px 0px 2px 0px rgba(0, 0, 0, 0.2);
    
     padding: 5%;
-    padding-bottom: 5%;
+    padding-right:0%;
+    padding-bottom: 7%;
     padding-top: 2%;
 
     border-radius: 10px;
@@ -1348,7 +1349,8 @@ margin-bottom:2%;
     background:white;
     box-shadow: 0px 0px 16px 0px rgba(0, 0, 0, 0.2);
    position: fixed;
-     z-index: 2;
+    padding-bottom: 2%;
+     z-index: 3;
      width: 75%;
 }
 
@@ -1360,8 +1362,7 @@ margin-bottom:2%;
 }
 
 #unique {
-    width: 90%;
-
+    width: 80%;
     float: left;
 }
 
@@ -1378,7 +1379,7 @@ margin-bottom:2%;
 
 #uni {
     float: left;
-    width: 6%;
+    width: 15%;
 }
 
 
